k3s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haddock-ingress
  namespace: haddock-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 80
      - path: /quotes
        pathType: Prefix
        backend:
          service:
            name: quotes-service
            port:
              number: 80
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: search-service
            port:
              number: 80
